Fixed div issue with elements overflowing to other divs

--- a/src/renderer/src/components/user-controls/styles/labeled-input.module.css
+++ b/src/renderer/src/components/user-controls/styles/labeled-input.module.css
@@ -2,9 +2,30 @@
   width: 100%;
   height: 1.25rem;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
 .inputContainer > label {
   font-size: 1rem;
+  width: 100%;
+}
+
+.inputContainer > input {
+  width: 100%;
+}
+
+/* Changes all flex columns divs into rows */
+@media (min-width: 870px) {
+  .inputContainer {
+    flex-direction: row;
+  }
+  
+  .inputContainer > label {
+    width: 30%;
+  }
+  
+  .inputContainer > input {
+    width: 70%;
+  }
 }
