--- a/src/renderer/src/components/user-controls/styles/page-selection.module.css
+++ b/src/renderer/src/components/user-controls/styles/page-selection.module.css
@@ -1,17 +1,33 @@
 .mainContainer {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   width: 100%;
 }
 
 .mainContainer > h2 {
-  width: 30%;
   font-size: clamp(1rem, 2vw, 1.25rem);
+  width: 100%;
 }
 
 .mainContainer > p {
   border: 1px solid var(--main-text-color);
-  width: 70%;
+  width: 100%;
   padding: 2px;
   height: 1.5rem;
+}
+
+/* Changes all flex columns divs into rows */
+@media (min-width: 800px) {
+  .mainContainer {
+    flex-direction: row;
+  }
+
+  .mainContainer > h2 {
+    width: 30%;
+  }
+
+  .mainContainer > p {
+    width: 70%;
+  }
 }
