--- a/src/renderer/src/styles.css
+++ b/src/renderer/src/styles.css
@@ -48,6 +48,8 @@
   background-color: var(--main-background-color);
   color: var(--main-text-color);
   border: 1px solid var(--accent-color-two);
+
+  padding: 0.2rem;
 }
 
 .interfaceInput:focus {
