--- a/src/renderer/src/styles/main-styles.module.css
+++ b/src/renderer/src/styles/main-styles.module.css
@@ -21,7 +21,7 @@
 }
 
 .userControlsContainer {
-  width: 20%;
+  width: 30%;
   padding: var(--base-padding);
 
   background-color: var(--secondary-background-color);
